Correct alignment images and text in service boxes

--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,10 @@ footer h5 {
     display: flex;
 }
 
+.services-row {
+    gap: 2.5rem;
+}
+
 /*------------------------------------Media Queries*/
 
 
